# custom-tool

./: .env.local.example  .gitignore  AGENT.md  README.md
.github/: copilot-instructions.md
app/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  MobileApp.tsx  main.tsx  mobile.css  tokens.css  vite-env.d.ts
app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json  mobile.json
app/src-tauri/icons/: icon.icns
app/src-tauri/ios/: ExportOptions-AppStore.plist
app/src-tauri/src/: lib.rs
app/src/__tests__/: Editor.test.tsx  MarkdownPreview.test.tsx  aiMarks.test.ts  canvasAI.test.ts  copilot.test.ts  copilotLock.test.ts  fileType.test.ts  setup.ts  workspace.test.ts  workspaceTools.test.ts
app/src/components/: AIMarkOverlay.css  AIMarkOverlay.tsx  AIPanel.css  AIPanel.tsx  AIReviewPanel.css  AIReviewPanel.tsx  AgentSession.tsx  BacklinksPanel.css  BacklinksPanel.tsx  BottomPanel.css  BottomPanel.tsx  CanvasEditor.css  CanvasEditor.tsx  CanvasErrorBoundary.tsx  Editor.css  Editor.tsx  EditorErrorBoundary.tsx  ExportModal.css  ExportModal.tsx  FindReplaceBar.css  FindReplaceBar.tsx  GooglePanel.css  GooglePanel.tsx  ImageSearchPanel.css  ImageSearchPanel.tsx  (+28 more)
docs/: brainstorm.md  session-log.md
scripts/: apply-migrations.sh  build-mac.sh  build.sh  deploy.sh  ios-device.sh  sync.sh  update-app.sh  upload-testflight.sh
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 0001_auth_sync.sql  0002_user_secrets.sql
(+74 files in other folders)
