[package]
name = "app"
version = "0.1.0"
description = "Cafezin — AI-assisted creative workspace"
authors = ["Pedro Martinez"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tokio = { version = "1", features = ["process", "time", "rt", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["multipart", "json"] }
git2 = { version = "0.19", optional = true, features = ["vendored-libgit2"] }

[target.'cfg(target_os = "ios")'.dependencies]
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }

[features]
# Enable native-Rust git (no git CLI) for Mac App Store and iOS builds.
# Build with: cargo build --features mas
mas = ["dep:git2"]

